group 'ch.taburett.jass'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

tasks.withType(JavaCompile) {
//    options.compilerArgs += "--enable-preview"
    project.sourceCompatibility = '11'
    project.targetCompatibility = '11'
}
//tasks.withType(Test) {
//    jvmArgs += "--enable-preview"
//}
//tasks.withType(JavaExec) {
//    jvmArgs += "--enable-preview"
//}

java {
    modularity.inferModulePath = true
}

